--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.9.0",
+    "@mui/x-date-pickers-pro": "^7.9.0",
     "axios": "^1.6.8",
+    "date-fns": "^2.29.3",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
